# rights_protection

./: .env_example  .gitignore  CAPABILITIES.md  CLAUDE.md  Dockerfile  TEST_REPORT.md  docker-compose.yml  langgraph.json  main.py  nginx.conf  pyproject.toml  requirements.txt  service.py  test_consultation_graph.py  test_flow_debug.py  test_full_flow.py  test_interactive.py  test_local.py
backend/: Dockerfile  requirements.txt  union_rights.db
backend/app/: config.py  main.py
backend/app/api/: ai.py  (+4 more)
backend/scripts/: seed_knowledge.py
data/: 三级案由体系.csv
devops/: Dockerfile  deployment.yml
docs/: AI+维权智能助手技术介绍.md  AI编程经验总结.md  CAPABILITIES.md  LLM应用开发注意事项.md  WORKLOG-2026-04-16.md  二期需求.md  流程图.md  需求.md  需求理解与澄清.md  项目历程：从自由问答到九步引导式智能咨询系统.md
docs/brainstorms/: 2026-04-15-phase2-rights-protection-requirements.md
docs/plans/: 2026-04-15-001-feat-nine-step-legal-consultation-plan.md  2026-04-15-002-feat-phase2-step-logic-plan.md
docs/references/: langgraph-create-agent-refactor.md  langgraph-prevention-strategies.md  multi-agent.md  技术路径.md
docs/superpowers/: SPEC.md
frontend/: Dockerfile  index.html  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  vite.config.ts
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/test-results/: .last-run.json
langgraph_model/: consultation_graph.py  consultation_state.py  legal_assistant.py  legal_supervisor.py  legal_workflow.py  load_cfg.py  prompts.py  prompts_bak.py  state.py  tools.py
legacy/: README.md  prompts.py  test_sse_result.md
scripts/: visualize_graph.py
tests/: chat_test.py  conftest.py
(+66 files in other folders)
