[project]
name = "rights-protection"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.135.3",
    "langchain-openai>=1.1.13",
    "langgraph>=1.1.6",
    "langgraph-cli[inmem]>=0.4.21",
    "pydantic>=2.13.0",
]
